samples/_failures_safe/1761496268_58a616_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34a24c0c.c: In function ‘bounding_box_volume’:
./samples/SAFE/__tmp_34a24c0c.c:134:5: error: expected expression at end of input
  134 |     return dx *
      |     ^~~~~~
./samples/SAFE/__tmp_34a24c0c.c:134:5: error: expected declaration or statement at end of input
